test/syc/good/postinc.c
/*
 * Postincrement
 */

int a;

int postinc(void)
{
	++a;
}
