test/syc/bad/attrunkn.c
/*
 * Unknown attribute
 */

void foo(void) __attribute__((bogus))
{
}

